--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-router-dom": "^4.2.6",
     "antd": "^3.5.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts-ts-antd": "2.15.1"
   },
   "scripts": {
