--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "dependencies": {
     "@types/react-router-dom": "^4.2.6",
+    "@types/react-slick": "^0.23.1",
     "antd": "^3.5.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts-ts-antd": "2.15.1"
+    "react-scripts-ts-antd": "2.15.1",
+    "react-slick": "^0.23.1"
   },
   "scripts": {
     "start": "react-scripts-ts-antd start",
