--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/react-router-dom": "^4.2.6",
-    "@types/react-slick": "^0.23.1",
+    
     "antd": "^3.5.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts-ts-antd": "2.15.1",
-    "react-slick": "^0.23.1"
+    "react-slick": "^0.23.1",
+    "react-transition-group": "^2.4.0"
   },
   "scripts": {
     "start": "react-scripts-ts-antd start",
@@ -24,6 +24,8 @@
     "@types/node": "^10.0.8",
     "@types/react": "^16.3.14",
     "@types/react-dom": "^16.0.5",
-    "typescript": "^2.8.3"
+    "typescript": "^2.8.3",
+    "@types/react-router-dom": "^4.2.6",
+    "@types/react-slick": "^0.23.2"
   }
 }
